The line thickness of curve, paths, nurbs, etc. is wrong #47454

Closed
opened 2016-02-17 09:45:31 +01:00 by Michael P. · 13 comments

System Information
System: Windows 7 64bit
RAM: 4096 MB
renderer: 'GeForce GTX 760/PCIe/SSE2'
vendor: 'NVIDIA Corporation'
version: '4.5.0 NVIDIA 353.30'

Blender Version
Broken: blender 2.76.11 (1c4f21f)
Worked: (optional)

Short description of error
Curve, paths, nurbs line thickness is wrong. Also the "Automatic Handles" seem to
be thicker than the other Handle types.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps
line-thickness-curves.png

line-thickness-curves.blend

**System Information** System: Windows 7 64bit RAM: 4096 MB renderer: 'GeForce GTX 760/PCIe/SSE2' vendor: 'NVIDIA Corporation' version: '4.5.0 NVIDIA 353.30' **Blender Version** Broken: blender 2.76.11 (1c4f21f) Worked: (optional) **Short description of error** Curve, paths, nurbs line thickness is wrong. Also the "Automatic Handles" seem to be thicker than the other Handle types. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps ![line-thickness-curves.png](https://archive.blender.org/developer/F283412/line-thickness-curves.png) [line-thickness-curves.blend](https://archive.blender.org/developer/F283414/line-thickness-curves.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @MichaelParucha

Added subscriber: @MichaelParucha
Author

Also please check

  • the selected/active "rings" of all metaballs (some of them cant be seen directly, because they are in the "meta ball")
  • surface Nurbs Circle and Nurbs Curve

{F283417}line-thickness-metaballs-surves-curves.blend

Also please check - the selected/active "rings" of all metaballs (some of them cant be seen directly, because they are in the "meta ball") - surface Nurbs Circle and Nurbs Curve {[F283417](https://archive.blender.org/developer/F283417/line-thickness-metaballs-surves-curves.png)}[line-thickness-metaballs-surves-curves.blend](https://archive.blender.org/developer/F283419/line-thickness-metaballs-surves-curves.blend)

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Campbell Barton self-assigned this 2016-02-17 10:44:57 +01:00

fixed 90705d6eda

fixed 90705d6eda
Author

Just checked the fix with blender 2.76.11 (a8e6b63) and this is only a partial fix.

Only the line width of the metaball ring is fixed.

This line widths are still not fixed:

  • surface Nurbs Circle and Nurbs Curve
  • Curve, paths, nurbs line
  • Automatic Handles are definitly to thick

Please open the provided files with a blender 2.76 and the diffrence should be obvious.
I can also provide screenshots.

Just checked the fix with blender 2.76.11 (a8e6b63) and this is only a partial fix. Only the line width of the metaball ring is fixed. This line widths are still not fixed: - surface Nurbs Circle and Nurbs Curve - Curve, paths, nurbs line - Automatic Handles are definitly to thick Please open the provided files with a blender 2.76 and the diffrence should be obvious. I can also provide screenshots.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Added subscriber: @brecht

Added subscriber: @brecht
Member

Added subscriber: @MikeErwin

Added subscriber: @MikeErwin

This issue was referenced by 1e58af0f53

This issue was referenced by 1e58af0f53318da8787ca8d9590336eb0b8d41cc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Note, 2.76 was also not working 100% in the case of nurbs surfaces mixing lines and surfaces will render the curves double width.

Commit from 1e58af0f53 works on a similar level to 2.76, and for this example

Note, 2.76 was also not working 100% in the case of nurbs surfaces mixing lines and surfaces will render the curves double width. Commit from 1e58af0f53 works on a similar level to 2.76, and for this example
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser Project (Legacy)
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47454
No description provided.