Fix T47454: Line width display error

Note, there are still cases where nurbs surfaces display double line width,
but this isn't a regression from previous releases.